@@ -21,6 +21,7 @@ Wraith - CHANGES
 @ 8.Passwords are no longer echoed back to terminal.
 + 9.Specifying ipv6 ip as last param in conf now supported.
 @ 10.Cmdline params -e/-d now except STDOUT as the outfile (echos to terminal).
+@ 11.Pscloak can be disabled by putting "!-" as the third line in the local conf.
 
 1.0.1
 ! 1.Fixed a cosmetic bug in show_channels
